# devshowcase

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  high-level-plan.md  overview-plan.md
.github/: pull_request_template.md
backend/: .dockerignore  .env.example  Dockerfile  Makefile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_tables.py  002_add_post_draft_column.py  003_add_user_preferences.py  004_add_token_unique_constraint.py  005_add_agent_output.py
backend/app/: config.py  database.py  graph.py  main.py  state.py
backend/app/middleware/: rate_limit.py
backend/app/models/: __init__.py  base.py
backend/app/nodes/: analyze.py  capture.py  error_handler.py  generate.py  ingest.py
backend/app/prompts/: __init__.py  analyze.py  generate.py
backend/app/routes/: deps.py  drafts.py  images.py  linkedin.py  runs.py  settings.py
backend/app/schemas/: drafts.py  linkedin.py  runs.py  settings.py
backend/app/services/: agent_executor.py  audit_log.py  content_safety.py  github_client.py  image_processor.py  linkedin_client.py  llm_client.py  r2_storage.py  run_executor.py  token_encryption.py
backend/app/services/screenshot/: __init__.py  project_card.py  readme_images.py  sandbox.py
backend/tests/: conftest.py  test_analyze.py  test_capture.py  test_content_safety.py  test_drafts.py  test_generate.py  test_ingest.py  test_linkedin.py  test_runs.py  test_settings.py
docs/: local-setup.md  security-hardening.md
e2b/: e2b.toml  (+1 more)
e2b-agent/: Dockerfile  e2b.toml
(+43 files in other folders)
