[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devshowcase"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "e2b-desktop>=2.0.0",
    "google-genai>=1.0.0",
    "httpx>=0.28.0",
    "pillow>=11.0.0",
    "cryptography>=44.0.0",
    "boto3>=1.35.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["app*"]
